syntax = "proto3";

package filter;

import "common.proto";

message Order {
  string id = 1;
  string product = 2;
  Money total = 3;
  Status status = 4;
}

message CreateOrderRequest {
  string product = 1;
  Money total = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  Pagination pagination = 1;
  Status status_filter = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
